// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> location === "/" to match snapshot 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-light border border-top-0 border-right-0 border-left-0"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      [\`/\`]
    </a>
    <button
      aria-controls="navbar"
      aria-expanded="false"
      aria-label="Toggle navigation"
      className="navbar-toggler"
      data-target="#navbar"
      data-toggle="collapse"
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      id="navbar"
    >
      <ul
        className="navbar-nav mr-auto"
      >
        <li
          className="nav-item"
        >
          <a
            aria-current="page"
            className="nav-link text-light active"
            href="/"
            onClick={[Function]}
            style={Object {}}
          >
            Home
          </a>
        </li>
      </ul>
    </div>
  </nav>,
  <div
    className="container-fluid bg-light"
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <h2>
            <svg
              baseProfile="tiny"
              className="align-middle"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              version="1.2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3s-6.186 5.34-9.643 8.232c-.203.184-.357.452-.357.768 0 .553.447 1 1 1h2v7c0 .553.447 1 1 1h3c.553 0 1-.448 1-1v-4h4v4c0 .552.447 1 1 1h3c.553 0 1-.447 1-1v-7h2c.553 0 1-.447 1-1 0-.316-.154-.584-.383-.768-3.433-2.892-9.617-8.232-9.617-8.232z"
              />
            </svg>
             
            <span
              className="align-middle"
            >
              Home
            </span>
          </h2>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-lg-3 col-md-6 col-sm-12 mb-4"
        >
          <div
            className="card text-light bg-secondary"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                Turin
              </h5>
              <p
                className="card-text"
              >
                Mon, Jan 01 01:00
                 
                +9
              </p>
            </div>
          </div>
        </div>
        <div
          className="col-lg-3 col-md-6 col-sm-12 mb-4"
        >
          <div
            className="card text-light bg-secondary"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                London
              </h5>
              <p
                className="card-text"
              >
                Mon, Jan 01 00:00
                 
                +8
              </p>
            </div>
          </div>
        </div>
        <div
          className="col-lg-3 col-md-6 col-sm-12 mb-4"
        >
          <div
            className="card text-light bg-secondary"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                New York
              </h5>
              <p
                className="card-text"
              >
                Sun, Dec 31 19:00
                 
                +3
              </p>
            </div>
          </div>
        </div>
        <div
          className="col-lg-3 col-md-6 col-sm-12 mb-4"
        >
          <div
            className="card text-light bg-primary"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                Los Angeles
              </h5>
              <p
                className="card-text"
              >
                Sun, Dec 31 16:00
                 
                
              </p>
            </div>
          </div>
        </div>
        <div
          className="col-lg-3 col-md-6 col-sm-12 mb-4"
        >
          <div
            className="card text-light bg-primary"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                San Francisco
              </h5>
              <p
                className="card-text"
              >
                Sun, Dec 31 16:00
                 
                
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        className="row loading"
      />
    </div>
  </div>,
  <footer
    className="border border-right-0 border-bottom-0 border-left-0 pt-3 pb-3"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
             v
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
            <a
              href="https://buttercms.com/"
              rel="noopener noreferrer"
              target="_blank"
            >
              powered by ButterCMS
            </a>
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
            <a
              href="https://newsapi.org/"
              rel="noopener noreferrer"
              target="_blank"
            >
              powered by News API
            </a>
          </small>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`<App /> location === "/blog" to match snapshot 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-light border border-top-0 border-right-0 border-left-0"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      [\`/\`]
    </a>
    <button
      aria-controls="navbar"
      aria-expanded="false"
      aria-label="Toggle navigation"
      className="navbar-toggler"
      data-target="#navbar"
      data-toggle="collapse"
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      id="navbar"
    >
      <ul
        className="navbar-nav mr-auto"
      >
        <li
          className="nav-item"
        >
          <a
            aria-current="page"
            className="nav-link text-light active"
            href="/"
            onClick={[Function]}
            style={Object {}}
          >
            Home
          </a>
        </li>
      </ul>
    </div>
  </nav>,
  <div
    className="container-fluid bg-light"
  >
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <h2>
          <svg
            baseProfile="tiny"
            className="align-middle"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            version="1.2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 6.879l-3.879-3.879c-.293-.293-.678-.439-1.061-.439-.384 0-.767.146-1.06.439l-10.939 10.939c-.293.293-.558.727-.75 1.188-.192.463-.311.959-.311 1.373v4.5h4.5c.414 0 .908-.119 1.371-.311.463-.192.896-.457 1.189-.75l10.94-10.939c.293-.293.439-.678.439-1.061 0-.384-.146-.767-.439-1.06zm-15.232 8.182l8.293-8.293 1.232 1.232-8.293 8.293-1.232-1.232zm1.732 3.939h-1.5l-1-1v-1.5c0-.077.033-.305.158-.605.01-.02 2.967 2.938 2.967 2.938-.322.134-.548.167-.625.167zm1.439-.768l-1.232-1.232 8.293-8.293 1.232 1.232-8.293 8.293zm9-9l-3.172-3.172 1.293-1.293 3.17 3.172-1.291 1.293z"
            />
          </svg>
           
          <span
            className="align-middle"
          >
            Blog
          </span>
        </h2>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <div
          className="progress"
          style={
            Object {
              "height": "4px",
            }
          }
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow={50}
            className="progress-bar w-50"
            role="progressbar"
          />
        </div>
      </div>
    </div>
    <div
      className="row pt-0 pb-4"
    >
      <div
        className="col-12"
      >
        <div
          className="card"
        >
          <img
            alt=""
            className="card-img-top"
          />
          <div
            className="card-body"
          >
            <h3
              className="card-title"
            >
              <a
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                href=""
                rel="noopener noreferrer"
                target="_self"
              />
            </h3>
            <p
              className="card-text"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <footer
    className="border border-right-0 border-bottom-0 border-left-0 pt-3 pb-3"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
             v
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
            <a
              href="https://buttercms.com/"
              rel="noopener noreferrer"
              target="_blank"
            >
              powered by ButterCMS
            </a>
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
            <a
              href="https://newsapi.org/"
              rel="noopener noreferrer"
              target="_blank"
            >
              powered by News API
            </a>
          </small>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`<App /> location === "/blog/namaste" to match snapshot 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-light border border-top-0 border-right-0 border-left-0"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      [\`/\`]
    </a>
    <button
      aria-controls="navbar"
      aria-expanded="false"
      aria-label="Toggle navigation"
      className="navbar-toggler"
      data-target="#navbar"
      data-toggle="collapse"
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      id="navbar"
    >
      <ul
        className="navbar-nav mr-auto"
      >
        <li
          className="nav-item"
        >
          <a
            aria-current="page"
            className="nav-link text-light active"
            href="/"
            onClick={[Function]}
            style={Object {}}
          >
            Home
          </a>
        </li>
      </ul>
    </div>
  </nav>,
  <div
    className="container-fluid bg-light"
  >
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <h2>
          <svg
            baseProfile="tiny"
            className="align-middle"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            version="1.2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 6.879l-3.879-3.879c-.293-.293-.678-.439-1.061-.439-.384 0-.767.146-1.06.439l-10.939 10.939c-.293.293-.558.727-.75 1.188-.192.463-.311.959-.311 1.373v4.5h4.5c.414 0 .908-.119 1.371-.311.463-.192.896-.457 1.189-.75l10.94-10.939c.293-.293.439-.678.439-1.061 0-.384-.146-.767-.439-1.06zm-15.232 8.182l8.293-8.293 1.232 1.232-8.293 8.293-1.232-1.232zm1.732 3.939h-1.5l-1-1v-1.5c0-.077.033-.305.158-.605.01-.02 2.967 2.938 2.967 2.938-.322.134-.548.167-.625.167zm1.439-.768l-1.232-1.232 8.293-8.293 1.232 1.232-8.293 8.293zm9-9l-3.172-3.172 1.293-1.293 3.17 3.172-1.291 1.293z"
            />
          </svg>
           
          <span
            className="align-middle"
          >
            Blog
          </span>
        </h2>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <div
          className="progress"
          style={
            Object {
              "height": "4px",
            }
          }
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow={50}
            className="progress-bar w-50"
            role="progressbar"
          />
        </div>
      </div>
    </div>
    <div
      className="row pt-0 pb-4"
    >
      <div
        className="col-12"
      >
        <div
          className="card"
        >
          <img
            alt=""
            className="card-img-top"
          />
          <div
            className="card-body"
          >
            <h3
              className="card-title"
            >
              <a
                dangerouslySetInnerHTML={
                  Object {
                    "__html": undefined,
                  }
                }
                href=""
                rel="noopener noreferrer"
                target="_self"
              />
            </h3>
            <p
              className="card-text"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <footer
    className="border border-right-0 border-bottom-0 border-left-0 pt-3 pb-3"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
             v
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
            <a
              href="https://buttercms.com/"
              rel="noopener noreferrer"
              target="_blank"
            >
              powered by ButterCMS
            </a>
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
            <a
              href="https://newsapi.org/"
              rel="noopener noreferrer"
              target="_blank"
            >
              powered by News API
            </a>
          </small>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`<App /> location === "/entertainment/buzzfeed" to match snapshot 1`] = `
Array [
  <nav
    className="navbar navbar-expand-lg navbar-light border border-top-0 border-right-0 border-left-0"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      [\`/\`]
    </a>
    <button
      aria-controls="navbar"
      aria-expanded="false"
      aria-label="Toggle navigation"
      className="navbar-toggler"
      data-target="#navbar"
      data-toggle="collapse"
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      id="navbar"
    >
      <ul
        className="navbar-nav mr-auto"
      >
        <li
          className="nav-item"
        >
          <a
            aria-current="page"
            className="nav-link text-light active"
            href="/"
            onClick={[Function]}
            style={Object {}}
          >
            Home
          </a>
        </li>
      </ul>
    </div>
  </nav>,
  <div
    className="container-fluid bg-light"
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <h2>
            <svg
              baseProfile="tiny"
              className="align-middle"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              version="1.2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 4h-18c-1.104 0-2 .896-2 2v12c0 1.104.896 2 2 2h18c1.104 0 2-.896 2-2v-12c0-1.104-.896-2-2-2zm-18 2h8v12h-8v-12zm18 12h-9v-12h9.003l-.003 12zM20 13.5c0-.275-.225-.5-.5-.5h-1c-.275 0-.5.225-.5.5v3c0 .275.225.5.5.5h1c.275 0 .5-.225.5-.5v-3zM17 7.5c0-.275-.225-.5-.5-.5h-3c-.275 0-.5.225-.5.5v5c0 .275.225.5.5.5h3c.275 0 .5-.225.5-.5v-5zM18.5 10h1c.275 0 .5-.225.5-.5s-.225-.5-.5-.5h-1c-.275 0-.5.225-.5.5s.225.5.5.5zM18.5 12h1c.275 0 .5-.225.5-.5s-.225-.5-.5-.5h-1c-.275 0-.5.225-.5.5s.225.5.5.5zM13.5 15h3c.275 0 .5-.225.5-.5s-.225-.5-.5-.5h-3c-.275 0-.5.225-.5.5s.225.5.5.5zM16.5 16h-3c-.275 0-.5.225-.5.5s.225.5.5.5h3c.275 0 .5-.225.5-.5s-.225-.5-.5-.5zM18.5 8h1c.275 0 .5-.225.5-.5s-.225-.5-.5-.5h-1c-.275 0-.5.225-.5.5s.225.5.5.5zM10 7.5c0-.275-.225-.5-.5-.5h-5c-.275 0-.5.225-.5.5v3c0 .275.225.5.5.5h5c.275 0 .5-.225.5-.5v-3zM9.501 14h-5c-.274 0-.5.225-.5.5s.226.5.5.5h5c.274 0 .499-.225.499-.5s-.225-.5-.499-.5zM9.501 12h-5c-.274 0-.5.225-.5.5s.226.5.5.5h5c.274 0 .499-.225.499-.5s-.225-.5-.499-.5zM9.501 16h-5c-.274 0-.5.225-.5.5s.226.5.5.5h5c.274 0 .499-.225.499-.5s-.225-.5-.499-.5z"
              />
            </svg>
             
            <span
              className="align-middle"
            >
              Entertainment
            </span>
          </h2>
        </div>
      </div>
      <div
        className="row pb-3"
      >
        <div
          className="col-12"
        >
          <ul
            className="nav nav-pills"
          >
            <li
              className="nav-item"
            >
              <a
                aria-current="page"
                className="nav-link active"
                href="/entertainment/buzzfeed"
                onClick={[Function]}
                style={Object {}}
              >
                Buzzfeed
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <div
          className="progress"
          style={
            Object {
              "height": "4px",
            }
          }
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow={50}
            className="progress-bar w-50"
            role="progressbar"
          />
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-12"
      />
    </div>
  </div>,
  <footer
    className="border border-right-0 border-bottom-0 border-left-0 pt-3 pb-3"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
             v
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
            <a
              href="https://buttercms.com/"
              rel="noopener noreferrer"
              target="_blank"
            >
              powered by ButterCMS
            </a>
          </small>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12"
        >
          <small
            className="float-right"
          >
            <a
              href="https://newsapi.org/"
              rel="noopener noreferrer"
              target="_blank"
            >
              powered by News API
            </a>
          </small>
        </div>
      </div>
    </div>
  </footer>,
]
`;
